--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,45 @@
-# Variables d'environnement pour le déploiement
-# Copiez ce fichier en .env.local pour le développement
+# Formation G CRM - Environment Variables Template
+# Copy this file to .env.local for development or set these in Netlify dashboard for production
 
-# URL de base de l'application (pour le déploiement)
-VITE_APP_URL=https://zen-academy-test.netlify.app
-
-# Mode de déploiement
+# Application Configuration
+VITE_APP_NAME=Formation G CRM
+VITE_APP_URL=https://formation-g-crm.netlify.app
 VITE_APP_ENV=production
+VITE_APP_VERSION=1.0.0
 
-# Analytics (optionnel)
-# VITE_GOOGLE_ANALYTICS_ID=G-XXXXXXXXXX
+# Database Configuration (Supabase)
+VITE_SUPABASE_URL=https://your-project.supabase.co
+VITE_SUPABASE_ANON_KEY=your-supabase-anon-key
+SUPABASE_SERVICE_ROLE_KEY=your-supabase-service-role-key
 
-# API endpoints (si nécessaire)
-# VITE_API_BASE_URL=https://api.example.com
+# Authentication
+JWT_SECRET=your-super-secure-jwt-secret-key-here
+AUTH_TOKEN_EXPIRY=24h
 
-# Contact form endpoint (si intégration backend)
-# VITE_CONTACT_FORM_ENDPOINT=https://api.example.com/contact
+# Email Configuration (for notifications)
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=your-email@formationg.fr
+SMTP_PASS=your-app-password
+
+# Analytics & Monitoring
+VITE_GOOGLE_ANALYTICS_ID=G-XXXXXXXXXX
+VITE_HOTJAR_ID=XXXXXXX
+
+# External APIs
+VITE_STRIPE_PUBLISHABLE_KEY=pk_live_xxxxxxxxxx
+STRIPE_SECRET_KEY=sk_live_xxxxxxxxxx
+
+# File Storage (Cloudinary or AWS S3)
+CLOUDINARY_CLOUD_NAME=your-cloud-name
+CLOUDINARY_API_KEY=your-api-key
+CLOUDINARY_API_SECRET=your-api-secret
+
+# Security Headers
+CORS_ORIGIN=https://formation-g-crm.netlify.app
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX_REQUESTS=100
+
+# Development Only (remove in production)
+# VITE_APP_ENV=development
+# VITE_APP_URL=http://localhost:5173
