--- a/netlify.toml
+++ b/netlify.toml
@@ -1,17 +1,27 @@
 [build]
   publish = "dist"
   command = "npm run build"
+  functions = "netlify/functions"
 
 [build.environment]
   NODE_VERSION = "18"
+  NPM_VERSION = "9"
+  VITE_APP_NAME = "Formation G CRM"
+  VITE_APP_VERSION = "1.0.0"
 
-# SPA redirect - important for React Router
+[[redirects]]
+  from = "/api/*"
+  to = "/.netlify/functions/:splat"
+  status = 200
+
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
 
-# Security headers
+[functions]
+  directory = "netlify/functions"
+
 [[headers]]
   for = "/*"
   [headers.values]
@@ -19,30 +29,35 @@
     X-XSS-Protection = "1; mode=block"
     X-Content-Type-Options = "nosniff"
     Referrer-Policy = "strict-origin-when-cross-origin"
-    Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self';"
+    Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https:; connect-src 'self' https: *.supabase.co;"
 
-# Cache static assets
 [[headers]]
   for = "/assets/*"
   [headers.values]
-    Cache-Control = "public, max-age=31536000, immutable"
+    Cache-Control = "max-age=31536000"
 
-# Optimize images
 [[headers]]
-  for = "*.jpg"
+  for = "*.js"
   [headers.values]
-    Cache-Control = "public, max-age=604800"
-    
+    Cache-Control = "max-age=31536000"
+    Content-Type = "application/javascript; charset=utf-8"
+
 [[headers]]
-  for = "*.png"
+  for = "*.mjs"
   [headers.values]
-    Cache-Control = "public, max-age=604800"
+    Cache-Control = "max-age=31536000"
+    Content-Type = "application/javascript; charset=utf-8"
+
+[[headers]]
+  for = "*.css"
+  [headers.values]
+    Cache-Control = "max-age=31536000"
+    Content-Type = "text/css; charset=utf-8"
 
 [[headers]]
   for = "*.webp"
   [headers.values]
     Cache-Control = "public, max-age=604800"
-
 # Preload critical resources
 [[headers]]
   for = "/index.html"
