🔧 Fix: Ajouter dépendances manquantes pour fonctions Netlify
- Ajout de jsonwebtoken@9.0.2 pour JWT auth
- Ajout de bcryptjs@2.4.3 pour hash passwords
- Correction de l'erreur 'Cannot find module jsonwebtoken'
- Fonctions Netlify maintenant complètes

--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "react-feather": "^2.0.10",
     "jspdf": "^2.5.1",
     "html2canvas": "^1.4.1",
-    "date-fns": "^2.29.3"
+    "date-fns": "^2.29.3",
+    "jsonwebtoken": "^9.0.2",
+    "bcryptjs": "^2.4.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
